test/SemanticAnalysis/LifetimeMethods/InvalidStaticnessMove.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// CHECK: .loci:6:2: error: lifetime method '::TestClass::__moveto' should not be static
	static void __moveto(unused void* dest, unused size_t offset) noexcept { }
}

// CHECK: 1 error generated.
